//
//  Constant.swift
//  MovieQuiz
//
//  Created by paul kellerman on 12.02.2023.
//

import Foundation

struct Constants {
    struct AlertLabel {
        static let title = "Этот раунд окончен!"
        static let scoreRound = "Ваш результат:"
        static let numberOfQuizzesPlayed = "Количество сыграных квизов:"
        static let bestScore = "Рекорд"
        static let avgAccuracy = "Средняя точность:"
    }
    
    struct AlertButton {
        static let buttonText = "Сыграть еще раз"
    }
}
